# stm32f103-cmake-boilerplate

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  bluepill.ioc  bluepill.xml  f103-bluepill.ioc  f103-bluepill.xml  flash.sh
Inc/: mxconstants.h  stm32f1xx_hal_conf.h  usart.h
Src/: gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usart.c
User/: common.h  handlers.c  handlers.h  init.c  init.h  user_main.c  user_main.h
User/utils/: debounce.c  debounce.h  debug.c  debug.h  malloc_safe.c  malloc_safe.h  syscalls.c  timebase.c  timebase.h
